--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,26 @@
-/* Finish the blackjack game with styles and features */
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background: url("../assets/table.png");
+  background-size: cover;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+h1 {
+  color: goldenrod;
+}
+
+#message-el {
+  font-style: italic;
+}
+button {
+  color: #016f32;
+  width: 150px;
+  background: goldenrod;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  border: none;
+  border-radius: 2px;
+}
